CHANGES IN VERSION 0.2.3
------------------------
 o rm.singleton.newick now supports internal node like:
   ((()X, ()Y)Z)AA, in which Z is a singleton. <2014-12-15, Mon>

CHANGES IN VERSION 0.2.2
------------------------
 o rm.singleton.newick <2014-12-09, Tue>
 o as.binary method <2014-12-09, Tue>
 o add treeinfo slot of jplace class <2014-12-08, Mon>
 o set.treeinfo and get.treeinfo functions  <2014-12-08, Mon>

CHANGES IN VERSION 0.2.1
------------------------
 o geom_eplace <2014-12-07, Sun>

CHANGES IN VERSION 0.2.0
------------------------
 o read.jplace to read the jplace file <2014-12-05, Fri>
 o jplace class for storing information of jplace file <2014-12-05, Fri>
 o show method of jplace class <2014-12-05, Fri>
 o get.tree method to get tree from jplace class <2014-12-05, Fri>
 o extend ggplot2 to support jplace class <2014-12-05, Fri>

CHANGES IN VERSION 0.1.1
------------------------
 o add distance legend in ggtree <2014-12-05, Fri>

CHANGES IN VERSION 0.1.0
------------------------
 o support ladderize tree <2014-12-05, Fri>
 o implement geom_tree, geom_tiplab, geom_tippoint, geom_aline and theme_tree <2014-12-04, Thu>
 o extend ggplot to support phylo object and implement ggtree function <2014-12-04, Thu>
 o implement fortify function <2014-12-04, Thu>
 o add getRoot, isRoot and getParent functions <2014-12-03, Wed>