@@ -1,4 +1,4 @@
-# Generated by roxygen2 (4.0.2): do not edit by hand
+# Generated by roxygen2 (4.1.0): do not edit by hand
 
 S3method(as.binary,phylo)
 S3method(as.data.frame,phylo)
@@ -19,6 +19,7 @@ export(ggtree)
 export(read.jplace)
 export(rm.singleton.newick)
 export(theme_tree)
+export(theme_tree2)
 exportClasses(jplace)
 exportMethods("set.treeinfo<-")
 exportMethods(get.placements)
@@ -32,6 +33,7 @@ importFrom(ggplot2,"%+replace%")
 importFrom(ggplot2,aes)
 importFrom(ggplot2,annotate)
 importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_line)
 importFrom(ggplot2,fortify)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_segment)
