@@ -1,4 +1,5 @@
-% Generated by roxygen2 (4.0.2): do not edit by hand
+% Generated by roxygen2 (4.1.0): do not edit by hand
+% Please edit documentation in R/ggtree-package.R, R/ggtree.R
 \docType{package}
 \name{ggtree}
 \alias{ggtree}
@@ -7,12 +8,12 @@
 \title{visualizing phylogenetic tree and heterogenous associated data based on grammar of graphics
 \code{ggtree} provides functions for visualizing phylogenetic tree and its associated data in R.}
 \usage{
-ggtree(tr, dist.legend = FALSE, ...)
+ggtree(tr, showDistance = FALSE, ...)
 }
 \arguments{
 \item{tr}{phylo object}
 
-\item{dist.legend}{add distance legend, logical}
+\item{showDistance}{add distance legend, logical}
 
 \item{...}{additional parameter}
 }
