@@ -1,13 +1,13 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
 % Please edit documentation in R/ggtree.R
-\name{theme_tree}
-\alias{theme_tree}
-\title{theme_tree}
+\name{theme_tree2}
+\alias{theme_tree2}
+\title{theme_tree2}
 \usage{
-theme_tree()
+theme_tree2()
 }
 \description{
-tree theme
+tree2 theme
 }
 \author{
 Yu Guangchuang
